# t-tetromino

./: .gitignore  .gitmodules  .travis.yml  Makefile  README.md  display_result.py  do_search.sh  fill_blocks.py  generate.py  link_data.py  list  make_csv.py  make_header.py  make_strip.py  make_strip_header.py  rectangles  relations.json  requirements.txt  shapes.py  table_output.py  todo.md
batch/: test_bash.sh
code_output/: _test_examples.py  _test_generate.py  generate.py
docker/: Dockerfile  main.py
docker_config/: Dockerfile  azure.sh  cred_notes.sh  details.sh  get_files.sh  main.py  requirements.txt  run.sh  spec.py
generate/: generate.py
helpers/: list_tasks.py  split.py  tag_name.py  test_split.py
legacy/: fill_blocks.py  log  table_output.py
manual/: left.py  make_grid.py  run.py  search_grids.py
pycover/: transform.py
results/: basic.py  check.py  compound.py  convert.py  (+15 more)
search/docker_config/: Dockerfile  Dockerfile.poetry  dump_problem.py  main.py  pyproject.toml  requirements.txt
search/docker_config/debug_data/: partial_solution  partial_solution_and_tiles  problem_0003
search/docker_config/results/: output_0009.txt  output_0010.txt  output_0012.txt  output_0015.txt  output_0017.txt  output_0018.txt  output_0019.txt  output_0020.txt  output_0021.txt  output_0022.txt  output_0023.txt  output_0024.txt
search/docker_config/tasks/: 0020.py  0021.py  0022.py
search/docker_config/tasks/done/: 0006.py  0010.py  0019.py  0023.py  0024.py
search/docker_config/tasks/holding/: 0003.py
search/docker_config/tasks/sample/: 0004.py
(+148 files in other folders)
