[tool.poetry]
name = "tt_search"
version = "0.1.0"
description = "t-tetromino search code"
authors = ["Jack Grahl <jack.grahl@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.1"
polyomino = "^0.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
